Commit partial implementation of migration module #18