@@ -1,7 +1,9 @@
 package com.bastex.codelearninghub.tools.liquibase;
 
+import com.bastex.codelearninghub.tools.liquibase.contexthelper.AppContextHolder;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.autoconfigure.domain.EntityScan;
@@ -13,7 +15,6 @@ import picocli.CommandLine.Option;
 import picocli.CommandLine.Parameters;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Map;
@@ -23,11 +24,12 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
- * EnableJpaRepositories and EntityScan are required here because we load repositories and entities from a different package.
- * By the default it wouldn't be required if entities were within same module in subpackages.
+ * EnableJpaRepositories and EntityScan are required here because we load repositories and entities from a different module with diff package.
+ * By the default it wouldn't be required if entities were within same package/subpackages.
  * <p>
  * We set ApplicationContext to Singleton instance because Liquibase scripts that initialize CustomTaskChange do not use Spring context.
  */
+@Slf4j
 @EntityScan("com.bastex.codelearninghub.spring.data.domain")
 @EnableJpaRepositories(basePackages = "com.bastex.codelearninghub.spring.data.repositories")
 @SpringBootApplication(scanBasePackages = {"com.bastex.codelearninghub.spring.data.services"})
@@ -51,13 +53,23 @@ public class LiquibaseApp {
                 description = "Migration contexts to execute. Valid values are: ${COMPLETION-CANDIDATES}",
                 completionCandidates = ContextCompletionCandidates.class,
                 type = Context.class, converter = ContextTypeConverter.class)
-        private final Set<Context> contexts = Collections.emptySet();
+        private final Set<Context> contexts = Set.of(Context.UPDATE);
 
         @Override
         public Integer call() throws Exception {
-            final ConfigurableApplicationContext applicationContext = SpringApplication.run(LiquibaseApp.class);
-            AppContextHolder.INSTANCE.setContext(applicationContext);
+            try (final ConfigurableApplicationContext applicationContext = SpringApplication.run(LiquibaseApp.class)) {
+                AppContextHolder.INSTANCE.setContext(applicationContext);
 
+                final String contextsToExecuteAsText = contexts.stream()
+                        .map(Context::getContextName)
+                        .distinct()
+                        .collect(Collectors.joining(","));
+
+                final DbMigrationService dbMigrationService = applicationContext.getBean(DbMigrationService.class);
+                dbMigrationService.executeMigration(contextsToExecuteAsText);
+            } catch (final RuntimeException e) {
+                log.error("Unable to execute the migration", e);
+            }
 
             return 0;
         }
@@ -66,7 +78,9 @@ public class LiquibaseApp {
     @Getter
     @RequiredArgsConstructor
     private enum Context {
-        INIT_DATA_SCRIPT("initDataScript", "Initializes data using Liquibase scripts"), INIT_DATA_CODE("initDataCode", "Initializes data using Spring Data classes");
+        UPDATE("update", "Executes regular db upgrade without initializing any sample data"),
+        INIT_DATA_SCRIPT("initDataScript", "Initializes data using Liquibase scripts"),
+        INIT_DATA_CODE("initDataCode", "Initializes data using Spring Data classes");
 
         private final String contextName;
 
